# marketing-workspace

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  justfile  lychee.toml  mkdocs.yml  package-lock.json  package.json  prek.toml  prettier.config.js  pyproject.toml
.agents/skills/competitors-analysis/: SKILL.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  index.md
docs/contributing/: README.md  abbreviations.md  architecture.md  quality-assurance.md  style-guide.md
docs/knowledge-base/: index.md
docs/knowledge-base/organisation/: teams.md
docs/marketing-strategy/: README.md
docs/marketing-strategy/competitors-analysis/: README.md  django-self-audit.md  fastapi.md  next-js-full.md  next-js.md  ruby-on-rails.md  template-competitor-analysis.md  template-competitor-source-map.md
docs/marketing-strategy/draft/: README.md  swot.md
docs/marketing-strategy/governance/: marketing-wg-charter.md
docs/marketing-strategy/research/: formats.md
docs/marketing-strategy/resources/: index.md
docs/theme/: main.html
docs/website-redesign/: index.md  redesign-announcement.md
