[project]
name = "marketing-workspace"
version = "0.0.0"
description = "A shared workspace to support our work on a new marketing strategy for Django and follow-on marketing activities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"

[dependency-groups]
dev = [
  "mypy==1.8.0",
  "ruff>=0.1.9",
  "ty>=0.0.24",
  # Documentation.
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-llmstxt>=0.5.0",
  "mkdocs-simple-hooks>=0.1.5",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort
# S: flake8-bandit
# T20: flake8-print
# BLE: flake8-blind-except
# C4: flake8-comprehensions
# B006: Do not use mutable data structures for argument defaults
# B904: Within an `except` clause, raise exceptions with `raise ... from err`
select = ["E", "F", "I", "S", "T20", "BLE", "C4", "B006", "B904", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101", # Assert allowed in tests
  "S105", # Hardcoded password assignments allowed in tests
  "S106", # Hardcoded password assignments allowed in tests
  "S301", # Use of pickle allowed in tests
  "S308", # Mark safe is often necessary in tests
  "S324", # Any hashlib usage is allowed in tests, no need to use a secure hash functions only
  "D",    # Docstrings are not required in tests
]
"test_*" = [
  "S101", # Assert allowed in tests
  "S105", # Hardcoded password assignments allowed in tests
  "S106", # Hardcoded password assignments allowed in tests
  "S301", # Use of pickle allowed in tests
  "S308", # Mark safe is often necessary in tests
  "S324", # Any hashlib usage is allowed in tests, no need to use a secure hash functions only
  "D",    # Docstrings are not required in tests
]

[tool.mypy]
python_version = "3.14"
# https://mypy.readthedocs.io/en/latest/config_file.html
#### Additional opt-in checks of mypy.
# Disallows usage of types that come from unfollowed imports (anything imported from an unfollowed import is automatically given a type of Any).
disallow_any_unimported = true
# Disallows all expressions in the module that have type Any.
disallow_any_expr = false
# Disallows functions that have Any in their signature after decorator transformation.
disallow_any_decorated = false
# Disallows explicit Any in type positions such as type annotations and generic type parameters.
disallow_any_explicit = false
# Disallows usage of generic types that do not specify explicit type parameters.
disallow_any_generics = true
# Disallows subclassing a value of type Any.
disallow_subclassing_any = true

# Disallows calling functions without type annotations from functions with type annotations.
disallow_untyped_calls = true
# Disallows defining functions without type annotations or with incomplete type annotations.
disallow_untyped_defs = true
# Disallows defining functions with incomplete type annotations.
disallow_incomplete_defs = true
# Type-checks the interior of functions without type annotations.
check_untyped_defs = true
# Reports an error whenever a function with type annotations is decorated with a decorator without annotations.
disallow_untyped_decorators = true


# Warns about casting an expression to its inferred type.
warn_redundant_casts = true
warn_unused_ignores = true
# Shows errors for missing return statements on some execution paths.
warn_no_return = true
# Shows a warning when returning a value with type Any from a function declared with a non- Any return type.
warn_return_any = true
# Shows a warning when encountering any code inferred to be unreachable or redundant after performing type analysis.
warn_unreachable = true


# Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = true
# Prevent automatic re-export of names imported from other modules to avoid accidental API exposure.
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
# For test cases, we don’t need to annotate functions.
disallow_untyped_defs = false
# disallow_incomplete_defs = false
# warn_no_return = false
